tests/invalid/for_loop_tuple_target_non_name/main.py
def run_case() -> None:
    for (a, (b, c)) in [(1, (2, 3))]:
        print(a)

if __name__ == "__main__":
    run_case()
